[gd_scene load_steps=15 format=2]

[ext_resource path="res://menu/command.gd" type="Script" id=1]
[ext_resource path="res://couleur/red.tres" type="Material" id=2]
[ext_resource path="res://couleur/black.tres" type="Material" id=3]
[ext_resource path="res://couleur/orange.tres" type="Material" id=4]
[ext_resource path="res://couleur/blue.tres" type="Material" id=5]
[ext_resource path="res://couleur/yellow.tres" type="Material" id=6]
[ext_resource path="res://couleur/green.tres" type="Material" id=7]

[sub_resource type="CubeMesh" id=18]
size = Vector3( 1.5, 0.5, 0.2 )

[sub_resource type="BoxShape" id=16]
extents = Vector3( 0.975823, 0.25, 0.1 )

[sub_resource type="DynamicFontData" id=21]
font_path = "res://font/Angellya.ttf"

[sub_resource type="DynamicFont" id=17]
size = 30
outline_color = Color( 1, 0.996078, 0.996078, 1 )
font_data = SubResource( 21 )

[sub_resource type="CubeMesh" id=19]
size = Vector3( 1.5, 0.5, 0.2 )

[sub_resource type="CubeMesh" id=20]
size = Vector3( 1.5, 0.5, 0.2 )

[sub_resource type="CubeMesh" id=15]
size = Vector3( 1.5, 0.5, 0.2 )

[node name="Command" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.5, 0, 0 )
script = ExtResource( 1 )

[node name="StaticBody1" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, 0, 0 )

[node name="MeshInstance" type="MeshInstance" parent="StaticBody1"]
transform = Transform( 1.3, 0, 0, 0, 1, 0, 0, 0, 1, -1.4, 1.6, 0 )
mesh = SubResource( 18 )
material/0 = ExtResource( 7 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.4, 1.6, 0 )
shape = SubResource( 16 )

[node name="label1" type="Label3D" parent="StaticBody1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.4, 1.6, 0.11 )
pixel_size = 0.0168
text = "touche 1"
font = SubResource( 17 )
uppercase = true

[node name="StaticBody2" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, 0 )

[node name="MeshInstance" type="MeshInstance" parent="StaticBody2"]
transform = Transform( 1.3, 0, 0, 0, 1, 0, 0, 0, 1, -1.4, 1.6, 0 )
mesh = SubResource( 19 )
material/0 = ExtResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.4, 1.6, 0 )
shape = SubResource( 16 )

[node name="label2" type="Label3D" parent="StaticBody2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.4, 1.6, 0.11 )
pixel_size = 0.0168
text = "touche 2"
font = SubResource( 17 )
uppercase = true

[node name="StaticBody3" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, -0.75, 0 )

[node name="MeshInstance" type="MeshInstance" parent="StaticBody3"]
transform = Transform( 1.3, 0, 0, 0, 1, 0, 0, 0, 1, -1.4, 1.6, 0 )
mesh = SubResource( 20 )
material/0 = ExtResource( 6 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.4, 1.6, 0 )
shape = SubResource( 16 )

[node name="label3" type="Label3D" parent="StaticBody3"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.4, 1.6, 0.11 )
pixel_size = 0.0168
text = "touche 3"
font = SubResource( 17 )
uppercase = true

[node name="StaticBody4" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, -0.75, 0 )

[node name="MeshInstance" type="MeshInstance" parent="StaticBody4"]
transform = Transform( 1.3, 0, 0, 0, 1, 0, 0, 0, 1, -1.4, 1.6, 0 )
mesh = SubResource( 15 )
material/0 = ExtResource( 5 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.4, 1.6, 0 )
shape = SubResource( 16 )

[node name="label4" type="Label3D" parent="StaticBody4"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.4, 1.6, 0.11 )
pixel_size = 0.0168
text = "touche 4"
font = SubResource( 17 )
uppercase = true

[node name="StaticBody5" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1, -1.5, 0 )

[node name="MeshInstance" type="MeshInstance" parent="StaticBody5"]
transform = Transform( 1.3, 0, 0, 0, 1, 0, 0, 0, 1, -1.4, 1.6, 0 )
mesh = SubResource( 15 )
material/0 = ExtResource( 4 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody5"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.4, 1.6, 0 )
shape = SubResource( 16 )

[node name="label5" type="Label3D" parent="StaticBody5"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.4, 1.6, 0.11 )
pixel_size = 0.0168
text = "touche 5"
font = SubResource( 17 )
uppercase = true

[node name="StaticBody6" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1, -1.5, 0 )

[node name="MeshInstance" type="MeshInstance" parent="StaticBody6"]
transform = Transform( 1.3, 0, 0, 0, 1, 0, 0, 0, 1, -1.4, 1.6, 0 )
mesh = SubResource( 15 )
material/0 = ExtResource( 3 )

[node name="CollisionShape" type="CollisionShape" parent="StaticBody6"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.4, 1.6, 0 )
shape = SubResource( 16 )

[node name="Label3D3" type="Label3D" parent="StaticBody6"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.4, 1.6, 0.11 )
pixel_size = 0.0168
text = "Return"
font = SubResource( 17 )
uppercase = true

[connection signal="mouse_entered" from="StaticBody1" to="." method="_on_StaticBody_mouse_entered"]
[connection signal="mouse_exited" from="StaticBody1" to="." method="_on_StaticBody_mouse_exited"]
[connection signal="mouse_entered" from="StaticBody2" to="." method="_on_StaticBody2_mouse_entered"]
[connection signal="mouse_exited" from="StaticBody2" to="." method="_on_StaticBody2_mouse_exited"]
[connection signal="mouse_entered" from="StaticBody3" to="." method="_on_StaticBody3_mouse_entered"]
[connection signal="mouse_exited" from="StaticBody3" to="." method="_on_StaticBody3_mouse_exited"]
[connection signal="mouse_entered" from="StaticBody4" to="." method="_on_StaticBody4_mouse_entered"]
[connection signal="mouse_exited" from="StaticBody4" to="." method="_on_StaticBody4_mouse_exited"]
[connection signal="mouse_entered" from="StaticBody5" to="." method="_on_StaticBody5_mouse_entered"]
[connection signal="mouse_exited" from="StaticBody5" to="." method="_on_StaticBody5_mouse_exited"]
[connection signal="mouse_entered" from="StaticBody6" to="." method="_on_StaticBody6_mouse_entered"]
[connection signal="mouse_exited" from="StaticBody6" to="." method="_on_StaticBody6_mouse_exited"]
